# playwright-cookie-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  claude_agent.py  docker-compose.yml  logger.py  main.py  manual_test_client.py  mcp_client.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  stealth.js  test_integration.py  test_services.py  test_webhook_unit.py  webhook_receiver.py
.github/workflows/: build.yml  docker.yml
lib/: __init__.py  auth.py  logger.py
playwright-service/: main.py
services/: browser_service.py  cookie_extractor.py  task_builder.py
