[project]
name = "playwright-cookie-service"
version = "0.1.0"
description = "Claude + Playwright MCP microservice for X authentication"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print statements, use logging)
    "PLC", # pylint conventions (includes PLC0415 for import-outside-toplevel)
    "ARG", # flake8-unused-arguments (catches unused function args)
    "SIM", # flake8-simplify (code simplification suggestions)
    "RET", # flake8-return (improves return statements)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "S101",  # allow assert statements (used in tests)
    "S104",  # allow binding to 0.0.0.0 for services
    "S110",  # allow try-except-pass for non-critical operations
    "S603",  # allow subprocess calls (used in tests with known executables)
    "S607",  # allow partial executable paths (docker, python, etc.)
]

[tool.ruff.lint.isort]
required-imports = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = false
